// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectStateDialog should return the correct state 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "content": "",
    "visible": false,
  },
}
`;

exports[`selectStateDialog should return the initial state if no state is found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "content": "",
    "visible": false,
  },
}
`;

exports[`selectStateDialog should return the initial state if resource key is not found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "content": "",
    "visible": false,
  },
}
`;

exports[`selectStateDialogContent should return the correct state 1`] = `""`;

exports[`selectStateDialogContent should return the default if state isn't found 1`] = `""`;

exports[`selectStateDialogVisible should return the correct state 1`] = `false`;

exports[`selectStateDialogVisible should return the default if state isn't found 1`] = `false`;
